--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </tr>
       </table>
     </div>
-    <div class="container">
+     <div class="container">
       <table class="desktop-table">
         <thead>
           <tr>
@@ -399,7 +399,6 @@
           </tr>
         </tbody>
       </table>
-      <!-- Mobile Tables -->
       <table class="mobile-table">
         <tr>
           <th colspan="2" class="main-header">Compact Sedans</th>
@@ -540,7 +539,7 @@
           </td>
         </tr>
       </table>
-    </div>
+    </div> 
     <div class="container">
       <table class="desktop-table">
         <thead>
@@ -1521,5 +1520,265 @@
         </tr>
       </table>
     </div>
+    <div class="container">
+      <table class="desktop-table">
+      <thead>
+        <tr>
+        <th colspan="4" class="main-header">Wagons</th>
+        </tr>
+        <tr>
+        <td colspan="4" class="subheader">
+          <em
+          >Need a car that's extremely practical? Or to move lots of stuff or cart around more than 4 people? Something good in bad weather? Look here</em
+          >
+        </td>
+        </tr>
+        <tr class="car-headers">
+        <th class="cost-column"></th>
+        <th>Subaru Outback & Forester</th>
+        <th>Ford Flex</th>
+        <th>Volvo V50 & V70</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="cost-row">
+        <td class="cost-data">
+          Cost to Own<br />
+          Low----------High<br />
+          $, $$, $$$, $$$$, $$$$$<br />
+          Flex: $$$<br />
+          Forester: $$ $$$<br />
+          Jetta: $$-$$$<br />
+          Magnum: $$-$$$<br />
+          Outback: $$-$$$<br />
+          Soul: $$<br />
+          X & Freestyle: $$$<br />
+          V50 & V70: $$-$$$
+        </td>
+        <td class="car-image-cell">
+          <img src="/images/sec6-1.png" alt="Subaru Outback & Forester" class="car-image" />
+        </td>
+        <td class="car-image-cell">
+          <img src="/images/sec6-2.png" alt="Ford Flex" class="car-image" />
+        </td>
+        <td class="car-image-cell">
+          <img src="/images/sec6-3.png" alt="Volvo V50 & V70" class="car-image" />
+        </td>
+        </tr>
+        <tr class="years-row">
+        <td>Years & Max Mileage<br />at Purchase</td>
+        <td>2000-2014(Outback) & 2000-2016(Forester)<br />100,00 to 200,000 depending on condition</td>
+        <td>2009-2014<br />100,000 to 175,000 depending on condition</td>
+        <td>2005-2011(V50) & 2000-2010(V70)<br />150,000 to 200,000 depending on condition</td>
+        </tr>
+        <tr class="pros-row highlight-green">
+        <td>Pros</td>
+        <td>
+          More cargo space than most competing CUV's. Fantastic all-around visibility. Top tier crash test scores. AWD standard
+        </td>
+        <td>
+          Nimble handling. Sliding rear doors & an easy access third row. Only seats 6. Not as feature rich as a traditional minivan
+        </td>
+        <td>
+          Superbly comfortable. Tons of cargo space & features. Great safety ratings. Optional rear facing third-row & turbo engines
+        </td>
+        </tr>
+        <tr class="cons-row highlight-pink">
+        <td>Cons</td>
+        <td>
+          Not all that agile. Numb steering. Base model trims are rather spartan & higher level trims have poorly laid out controls
+        </td>
+        <td>
+          Somewhat sluggish transmission. Focus on space for people means not as much cargo space as some minivans or CUV's
+        </td>
+        <td>
+          Weak NA engines that return average fuel economy. V70's handling is only mediocre. V50 can have an overly firm ride
+        </td>
+        </tr>
+        <tr class="problems-row">
+        <td>Common Problem<br />Areas & Issues</td>
+        <td>
+          Automatic Transmission, AWD System/Differentials. Electrical Accessories, Excessive Oil Consumption
+        </td>
+        <td>
+          Water Pump Leaking, Oil Leaking, Fuel Pump, Turbo, Electrical Accessories, Power Steering Pump
+        </td>
+        <td>
+          Transmission Failure, PCV System, Rear Main Seal, Instrument Panel Wiring, Fuel Pump Housing Leaking
+        </td>
+        </tr>
+        <tr class="alternates-row highlight-blue">
+        <td rowspan="2">Alternates &<br />Honorable Mentions</td>
+        <td>
+          Kia Soul (10-16)<br />Not a traditional wagons but it has tons of passenger space. Loads of features, Good safety scores. Mediocre cargo space
+        </td>
+        <td>
+          Ford Freestyle (05-07) & Ford Taurus X (08-09)<br />What happens when you make a wagon out of a Ford Explorer. Hard to find, but spacious, comfortable & safe
+        </td>
+        <td>
+          Dodge Magnum (05-08)<br />Roomy interior. Optional AWD. Muscle car feel in a wagon body style if you can snag a V8. Low budget Interior & meh V6
+        </td>
+        </tr>
+        <tr class="alternates-row highlight-blue">
+        <td>
+          VW Jetta Sportwagen (11-14)<br />Based on the Golf. Tons of space, upscale interior, & a nice ride. Dieselgate TDI's have great MPG's If you can find one
+        </td>
+        <td>
+          Mazda 5 (06-15)<br />High quality cabin for an American vehicle. Near luxury ride quality. Great turbo engine. Tons of features & optional AWD
+        </td>
+        <td>
+          Cars From Other Sections (See Original Listings)<br />Mercedes C & E Class, BMW 3 & 5 Series, Subaru Impreza, VW Passat, Accord Crosstour-(MY 11-12) & Cadillac CTS
+        </td>
+        </tr>
+      </tbody>
+      </table>
+      <!-- Mobile Tables -->
+      <table class="mobile-table">
+      <tr>
+        <th colspan="2" class="main-header">Wagons</th>
+      </tr>
+      <tr>
+        <td colspan="2" class="subheader">
+        <em
+          >Need a car that's extremely practical? Or to move lots of stuff or cart around more than 4 people? Something good in bad weather? Look here</em
+        >
+        </td>
+      </tr>
+      <tr class="car-headers">
+        <th colspan="2">Subaru Outback & Forester</th>
+      </tr>
+      <tr class="car-image-row">
+        <td colspan="2" class="car-image-cell">
+        <img src="/images/sec6-1.png" alt="Subaru Outback & Forester" class="car-image" />
+        </td>
+      </tr>
+      <tr>
+        <td>Years & Max Mileage</td>
+        <td>2000-2014(Outback) & 2000-2016(Forester)<br />100,00 to 200,000 depending on condition</td>
+      </tr>
+      <tr class="highlight-green">
+        <td>Pros</td>
+        <td>
+        More cargo space than most competing CUV's. Fantastic all-around visibility. Top tier crash test scores. AWD standard
+        </td>
+      </tr>
+      <tr class="highlight-pink">
+        <td>Cons</td>
+        <td>
+        Not all that agile. Numb steering. Base model trims are rather spartan & higher level trims have poorly laid out controls
+        </td>
+      </tr>
+      <tr class="problems-row">
+        <td>Common Problems</td>
+        <td>
+        Automatic Transmission, AWD System/Differentials. Electrical Accessories, Excessive Oil Consumption
+        </td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Alternates</td>
+        <td>
+        Kia Soul (10-16)<br />Not a traditional wagons but it has tons of passenger space. Loads of features, Good safety scores. Mediocre cargo space
+        </td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Honorable Mentions</td>
+        <td>
+        Ford Freestyle (05-07) & Ford Taurus X (08-09)<br />What happens when you make a wagon out of a Ford Explorer. Hard to find, but spacious, comfortable & safe
+        </td>
+      </tr>
+      </table>
+
+      <table class="mobile-table">
+      <tr class="car-headers">
+        <th colspan="2">Ford Flex</th>
+      </tr>
+      <tr class="car-image-row">
+        <td colspan="2" class="car-image-cell">
+        <img src="/images/sec6-2.png" alt="Ford Flex" class="car-image" />
+        </td>
+      </tr>
+      <tr>
+        <td>Years & Max Mileage</td>
+        <td>2009-2014<br />100,000 to 175,000 depending on condition</td>
+      </tr>
+      <tr class="highlight-green">
+        <td>Pros</td>
+        <td>
+        Nimble handling. Sliding rear doors & an easy access third row. Only seats 6. Not as feature rich as a traditional minivan
+        </td>
+      </tr>
+      <tr class="highlight-pink">
+        <td>Cons</td>
+        <td>
+        Somewhat sluggish transmission. Focus on space for people means not as much cargo space as some minivans or CUV's
+        </td>
+      </tr>
+      <tr class="problems-row">
+        <td>Common Problems</td>
+        <td>
+        Water Pump Leaking, Oil Leaking, Fuel Pump, Turbo, Electrical Accessories, Power Steering Pump
+        </td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Alternates</td>
+        <td>
+        Dodge Magnum (05-08)<br />Roomy interior. Optional AWD. Muscle car feel in a wagon body style if you can snag a V8. Low budget Interior & meh V6
+        </td>
+      </tr>
+      <tr class="alternates-row highlight-blue"></tr>
+        <td>Honorable Mentions</td>
+        <td>
+        VW Jetta Sportwagen (11-14)<br />Based on the Golf. Tons of space, upscale interior, & a nice ride. Dieselgate TDI's have great MPG's If you can find one
+        </td>
+      </tr>
+      </table>
+      <table class="mobile-table">
+      <tr class="car-headers">
+        <th colspan="2">Volvo V50 & V70</th>
+      </tr>
+      <tr class="car-image-row">
+        <td colspan="2" class="car-image-cell">
+        <img src="/images/sec6-3.png" alt="Volvo V50 & V70" class="car-image" />
+        </td>
+      </tr>
+      <tr>
+        <td>Years & Max Mileage</td>
+        <td>2005-2011(V50) & 2000-2010(V70)<br />150,000 to 200,000 depending on condition</td>
+      </tr>
+      <tr class="highlight-green">
+        <td>Pros</td>
+        <td>
+        Superbly comfortable. Tons of cargo space & features. Great safety ratings. Optional rear facing third-row & turbo engines
+        </td>
+      </tr>
+      <tr class="highlight-pink">
+        <td>Cons</td>
+        <td>
+        Weak NA engines that return average fuel economy. V70's handling is only mediocre. V50 can have an overly firm ride
+        </td>
+      </tr>
+      <tr class="problems-row">
+        <td>Common Problems</td>
+        <td>
+        Transmission Failure, PCV System, Rear Main Seal, Instrument Panel Wiring, Fuel Pump Housing Leaking
+        </td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Alternates</td>
+        <td>
+        Mazda 5 (06-15)<br />High quality cabin for an American vehicle. Near luxury ride quality. Great turbo engine. Tons of features & optional AWD
+        </td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Honorable Mentions</td>
+        <td>
+        Cars From Other Sections (See Original Listings)<br />Mercedes C & E Class, BMW 3 & 5 Series, Subaru Impreza, VW Passat, Accord Crosstour-(MY 11-12) & Cadillac CTS
+        </td>
+      </tr>
+      </table>
+    </div>
+    
+
+
   </body>
 </html>
