--- a/index.html
+++ b/index.html
@@ -4069,6 +4069,14 @@
       </table>
       <!-- Mobile Tables -->
       <table class="mobile-table">
+          <tr>
+          <th colspan="2" class="main-header">Off-Roaders</th>
+        </tr>
+        <tr>
+          <td colspan="2" class="subheader">
+            <em>Looking for a great factory off-roader or a good base for an off-road build? !!!Note!!! Due to a lack of applicable vehicles there are no European options in this category</em>
+          </td>
+        </tr>
         <tr>
           <th colspan="2" class="main-header">Toyota 4Runner (4x4 Only)</th>
         </tr>
@@ -4161,7 +4169,366 @@
         </tr>
       </table>
     </div>
+    <div class="container">
+      <table class="desktop-table">
+    <thead>
+      <tr>
+        <th colspan="4" class="main-header">Vans & Minivans</th>
+      </tr>
+      <tr>
+        <td colspan="4" class="subheader">
+          <em>Because sometimes you just need a Van !!!Note!!! Due to a large selection of applicable USDM vehicles, European options have been excluded</em>
+        </td>
+      </tr>
+      <tr class="car-headers">
+        <th class="cost-column"></th>
+        <th>Honda Odyssey</th>
+        <th>Chrysler Town & Country</th>
+        <th>Ford Transit & Transit Connect</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="cost-row">
+        <td class="cost-data">
+          Cost to Own<br />
+          Low----------High<br />
+          Freestar: $-$$
+          Monterey: $-$$
+          Odyssey: $$
+          Savana/Express: $$
+          Sienna: $$
+          T&C: $-$$$
+          Transit: $$
+        </td>
+        <td class="car-image-cell">
+          <img src="/images/sec17-1.png" alt="Honda Odyssey" class="car-image" />
+        </td>
+        <td class="car-image-cell">
+          <img src="/images/sec17-2.png" alt="Chrysler Town & Country" class="car-image" />
+        </td>
+        <td class="car-image-cell">
+          <img src="/images/sec17-3.png" alt="Ford Transit & Transit Connect" class="car-image" />
+        </td>
+      </tr>
+      <tr class="years-row">
+        <td>Years & Max Mileage<br />at Purchase</td>
+        <td>2000-2010<br />100,000 to 200,000 depending on condition</td>
+        <td>2001-2014<br />100,000 to 200,000 depending on condition</td>
+        <td>2010-2017<br />100,000 to 200,000 depending on condition</td>
+      </tr>
+      <tr class="pros-row highlight-green">
+        <td>Pros</td>
+        <td>Tons of space, great safety ratings, & lots of available options. Newer models had a great V6 and fold flat 3rd row</td>
+        <td>Stow 'n Go seats let you fold away 2nd & 3rd row for a flat floor. Smooth and quiet driving dynamic. Nice V6 engine</td>
+        <td>Can be configured or customized for any job you can imagine. Tons of options & interior space. Good fuel economy.</td>
+      </tr>
+      <tr class="cons-row highlight-pink">
+        <td>Cons</td>
+        <td>Honda badge - price inflation. Older models had sluggish transmissions & were underpowered even for a minivan</td>
+        <td>Build quality can be suspect. Interior in base trim models will feel very "budget". Numb steering to match vague handling</td>
+        <td>Limited payload & towing capacity. Turbo engine only on short wheelbase model. Passenger van 2nd row doesn't slide</td>
+      </tr>
+      <tr class="problems-row">
+        <td>Common Problem<br />Areas & Issues</td>
+        <td>Automatic Transmission, EGR Valve, Emissions system, Power Sliding Doors, Main Blower Motor</td>
+        <td>Transmission Failure, Interior Plastic Cracking/Rotting, Excessive Oil Consumption, TIPM, Electrical Accessories</td>
+        <td>Transmission failure, Misfires/Sparkplugs, Main Wiring Harness</td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td rowspan="2">Alternates &<br />Honorable Mentions</td>
+        <td>Toyota Sienna (03-09)<br />Based on the Toyota K platform. Safe, reliable, refined & with fold flat rear seat. Can be found with optional AWD</td>
+        <td>Ford Freestar & Mercury Monterey (04-07)<br />Good safety features & crash test scores. Less refined & lacks options of the competition, but can be found dirt cheap</td>
+        <td>GMC Savana & Chevy Express (03-14)<br />V8 engines, multiple wheelbases, low grade plastics, huge interiors & even optional AWD. Configuration & interior options</td>
+      </tr>
+    </tbody>
+  </table>
+      <!-- Mobile Tables -->
+      <table class="mobile-table">
+         <tr>
+          <th colspan="2" class="main-header">ans & Minivans</th>
+        </tr>
+        <tr>
+          <td colspan="2" class="subheader">
+            <em>Because sometimes you just need a Van !!!Note!!! Due to a large selection of applicable USDM vehicles, European options have been excluded</em>
+          </td>
+        </tr>
+      <tr>
+        <th colspan="2" class="main-header">Honda Odyssey</th>
+      </tr>
+      <tr class="car-image-row">
+        <td colspan="2" class="car-image-cell">
+        <img src="/images/sec17-1.png" alt="Honda Odyssey" class="car-image" />
+        </td>
+      </tr>
+      <tr>
+        <td>Years & Max Mileage</td>
+        <td>2000-2010<br />100,000 to 200,000 depending on condition</td>
+      </tr>
+      <tr class="highlight-green">
+        <td>Pros</td>
+        <td>Tons of space, great safety ratings, & lots of available options. Newer models had a great V6 and fold flat 3rd row</td>
+      </tr>
+      <tr class="highlight-pink">
+        <td>Cons</td>
+        <td>Honda badge - price inflation. Older models had sluggish transmissions & were underpowered even for a minivan</td>
+      </tr>
+      <tr class="problems-row">
+        <td>Common Problems</td>
+        <td>Automatic Transmission, EGR Valve, Emissions system, Power Sliding Doors, Main Blower Motor</td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Alternates & Honorable Mentions</td>
+        <td>Toyota Sienna (03-09)<br />Based on the Toyota K platform. Safe, reliable, refined & with fold flat rear seat. Can be found with optional AWD</td>
+      </tr>
+      </table>
 
+      <table class="mobile-table">
+      <tr>
+        <th colspan="2" class="main-header">Chrysler Town & Country</th>
+      </tr>
+      <tr class="car-image-row">
+        <td colspan="2" class="car-image-cell">
+        <img src="/images/sec17-2.png" alt="Chrysler Town & Country" class="car-image" />
+        </td>
+      </tr>
+      <tr>
+        <td>Years & Max Mileage</td>
+        <td>2001-2014<br />100,000 to 200,000 depending on condition</td>
+      </tr>
+      <tr class="highlight-green">
+        <td>Pros</td>
+        <td>Stow 'n Go seats let you fold away 2nd & 3rd row for a flat floor. Smooth and quiet driving dynamic. Nice V6 engine</td>
+      </tr>
+      <tr class="highlight-pink">
+        <td>Cons</td>
+        <td>Build quality can be suspect. Interior in base trim models will feel very "budget". Numb steering to match vague handling</td>
+      </tr>
+      <tr class="problems-row">
+        <td>Common Problems</td>
+        <td>Transmission Failure, Interior Plastic Cracking/Rotting, Excessive Oil Consumption, TIPM, Electrical Accessories</td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Alternates & Honorable Mentions</td>
+        <td>Ford Freestar & Mercury Monterey (04-07)<br />Good safety features & crash test scores. Less refined & lacks options of the competition, but can be found dirt cheap</td>
+      </tr>
+      </table>
+
+      <table class="mobile-table">
+      <tr>
+        <th colspan="2" class="main-header">Ford Transit & Transit Connect</th>
+      </tr>
+      <tr class="car-image-row">
+        <td colspan="2" class="car-image-cell">
+        <img src="/images/sec17-3.png" alt="Ford Transit & Transit Connect" class="car-image" />
+        </td>
+      </tr>
+      <tr>
+        <td>Years & Max Mileage</td>
+        <td>2010-2017<br />100,000 to 200,000 depending on condition</td>
+      </tr>
+      <tr class="highlight-green">
+        <td>Pros</td>
+        <td>Can be configured or customized for any job you can imagine. Tons of options & interior space. Good fuel economy.</td>
+      </tr>
+      <tr class="highlight-pink">
+        <td>Cons</td>
+        <td>Limited payload & towing capacity. Turbo engine only on short wheelbase model. Passenger van 2nd row doesn't slide</td>
+      </tr>
+      <tr class="problems-row">
+        <td>Common Problems</td>
+        <td>Transmission failure, Misfires/Sparkplugs, Main Wiring Harness</td>
+      </tr>
+      <tr class="alternates-row highlight-blue">
+        <td>Alternates & Honorable Mentions</td>
+        <td>GMC Savana & Chevy Express (03-14)<br />V8 engines, multiple wheelbases, low grade plastics, huge interiors & even optional AWD. Configuration & interior options</td>
+      </tr>
+      </table>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <div class="container">
+      <table class="desktop-table">
+        <thead>
+            <tr>
+                <th colspan="4" class="main-header">Special Snowflakes: Want One? Do Your Research!</th>
+            </tr>
+            <tr>
+                <td colspan="4" class="subheader">
+                    <em>While interesting & fun to drive, these cars may be harder to find, unreliable, expensive to maintain, difficult to service for /o/ beginners or ANY combination of the 4!</em>
+                </td>
+            </tr>
+            <tr class="car-headers">
+                <th class="cost-column"></th>
+                <th>Subaru Impreza WRX</th>
+                <th>Dodge Neon SRT-4</th>
+                <th>Saab 9-2X/9-3/9-5</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="cost-row">
+                <td class="cost-data">
+                    Cost to Own<br />
+                    Low----------High<br />
+                    All-Saab's: $$-$$$$
+                    Baja: $$-$$$
+                    Caliber: $$
+                    C30: $$-$$$
+                    Neon: $$-$$$
+                    PT Cruiser: $$
+                    WRX: $$$
+                </td>
+                <td class="car-image-cell">
+                    <img src="/images/sec18-1.png" alt="Subaru Impreza WRX" class="car-image" />
+                </td>
+                <td class="car-image-cell">
+                    <img src="/images/sec18-2.png" alt="Dodge Neon SRT-4" class="car-image" />
+                </td>
+                <td class="car-image-cell">
+                    <img src="/images/sec18-3.png" alt="Saab 9-2X/9-3/9-5" class="car-image" />
+                </td>
+            </tr>
+            <tr class="years-row">
+                <td>Years & Max Mileage<br />at Purchase</td>
+                <td>2000-2007<br />125,000 to 200,000 depending on condition</td>
+                <td>2003-2005<br />100,000 to 175,000 depending on condition</td>
+                <td>9-2X(2005-2006) 9-3(2000-2011) 9-5(2000-2011)<br />100,000 to 175,000 depending on condition</td>
+            </tr>
+            <tr class="pros-row highlight-green">
+                <td>Pros</td>
+                <td>AWD comes standard. Can be found as a sedan or wagon. Excellent handling coupled with a fantastic turbo engine</td>
+                <td>230hp turbocharged with huge potential for cheap aftermarket power gains. Makings of a great sleeper car</td>
+                <td>All fun to drive. 9-2X is an Impreza underneath. Convertibles, wagons & AWD options available. Some come with 300+ HP</td>
+            </tr>
+            <tr class="cons-row highlight-pink">
+                <td>Cons</td>
+                <td>Most WRX's at this price point will have been heavily abused/neglected or have major mechanical problems</td>
+                <td>For 5k most examples will have been thrashed to pieces and/or been poorly modified. It's still a Neon underneath</td>
+                <td>Owning a dead Swedish brand means parts & service can be a headache. Earlier models not as refined as later cars</td>
+            </tr>
+            <tr class="problems-row">
+                <td>Common Problem<br />Areas & Issues</td>
+                <td>Poor Aftermarket Modifications, Engine Mounts, Air Bags/SRS System, Clutch, Differentials</td>
+                <td>Poor Aftermarket Modifications, Oil Leaks, Rust, Electrical Accessories, Interior Plastics Cracking & Rotting</td>
+                <td>ABS Module, Excessive Oil Consumption, ECM Failure, Hard Starts/Valve Wear, Water Pump, Convertible Tops</td>
+            </tr>
+            <tr class="alternates-row highlight-blue">
+                <td rowspan="2">Alternates &<br />Honorable Mentions</td>
+                <td>Subaru Baja (03-06)<br />Can't decide if you want a Jeep or Impreza? Get the Baja. Tons of room for any number & style of aftermarket builds</td>
+                <td>V8 Chrysler 300 (05-13)<br />Built on retired Mercedes platforms & parts. Easy to score 340+ horsepower V8's, 5.7L has huge aftermarket potential</td>
+                <td>Fiat 500 (12-16)<br />Very Spacious for a small hatchback. Great MPG's with a manual. 500 Abarths are right on the cusp of the 5k budget</td>
+            </tr>
+        </tbody>
+    </table>
+      <!-- Mobile Tables -->
+      <table class="mobile-table">
+        <tr>
+          <th colspan="2" class="main-header">Special Snowflakes: Want One? Do Your Research!</th>
+        </tr>
+        <tr>
+          <td colspan="2" class="subheader">
+            <em>While interesting & fun to drive, these cars may be harder to find, unreliable, expensive to maintain, difficult to service for /o/ beginners or ANY combination of the 4!</em>
+          </td>
+        </tr>
+        <tr class="car-headers">
+          <th colspan="2">Subaru Impreza WRX</th>
+        </tr>
+        <tr class="car-image-row">
+          <td colspan="2" class="car-image-cell">
+            <img src="/images/sec18-1.png" alt="Subaru Impreza WRX" class="car-image" />
+          </td>
+        </tr>
+        <tr>
+          <td>Years & Max Mileage</td>
+          <td>2000-2007<br />125,000 to 200,000 depending on condition</td>
+        </tr>
+        <tr class="highlight-green">
+          <td>Pros</td>
+          <td>AWD comes standard. Can be found as a sedan or wagon. Excellent handling coupled with a fantastic turbo engine</td>
+        </tr>
+        <tr class="highlight-pink">
+          <td>Cons</td>
+          <td>Most WRX's at this price point will have been heavily abused/neglected or have major mechanical problems</td>
+        </tr>
+        <tr class="problems-row">
+          <td>Common Problems</td>
+          <td>Poor Aftermarket Modifications, Engine Mounts, Air Bags/SRS System, Clutch, Differentials</td>
+        </tr>
+        <tr class="alternates-row highlight-blue">
+          <td>Alternates & Honorable Mentions</td>
+          <td>Subaru Baja (03-06)<br />Can't decide if you want a Jeep or Impreza? Get the Baja. Tons of room for any number & style of aftermarket builds</td>
+        </tr>
+      </table>
+
+      <table class="mobile-table">
+        <tr>
+          <th colspan="2" class="main-header">Dodge Neon SRT-4</th>
+        </tr>
+        <tr class="car-image-row">
+          <td colspan="2" class="car-image-cell">
+            <img src="/images/sec18-2.png" alt="Dodge Neon SRT-4" class="car-image" />
+          </td>
+        </tr>
+        <tr>
+          <td>Years & Max Mileage</td>
+          <td>2003-2005<br />100,000 to 175,000 depending on condition</td>
+        </tr>
+        <tr class="highlight-green">
+          <td>Pros</td>
+          <td>230hp turbocharged with huge potential for cheap aftermarket power gains. Makings of a great sleeper car</td>
+        </tr>
+        <tr class="highlight-pink">
+          <td>Cons</td>
+          <td>For 5k most examples will have been thrashed to pieces and/or been poorly modified. It's still a Neon underneath</td>
+        </tr>
+        <tr class="problems-row">
+          <td>Common Problems</td>
+          <td>Poor Aftermarket Modifications, Oil Leaks, Rust, Electrical Accessories, Interior Plastics Cracking & Rotting</td>
+        </tr>
+        <tr class="alternates-row highlight-blue">
+          <td>Alternates & Honorable Mentions</td>
+          <td>V8 Chrysler 300 (05-13)<br />Built on retired Mercedes platforms & parts. Easy to score 340+ horsepower V8's, 5.7L has huge aftermarket potential</td>
+        </tr>
+      </table>
+
+      <table class="mobile-table">
+        <tr>
+          <th colspan="2" class="main-header">Saab 9-2X/9-3/9-5</th>
+        </tr>
+        <tr class="car-image-row">
+          <td colspan="2" class="car-image-cell">
+            <img src="/images/sec18-3.png" alt="Saab 9-2X/9-3/9-5" class="car-image" />
+          </td>
+        </tr>
+        <tr>
+          <td>Years & Max Mileage</td>
+          <td>9-2X(2005-2006) 9-3(2000-2011) 9-5(2000-2011)<br />100,000 to 175,000 depending on condition</td>
+        </tr>
+        <tr class="highlight-green">
+          <td>Pros</td>
+          <td>All fun to drive. 9-2X is an Impreza underneath. Convertibles, wagons & AWD options available. Some come with 300+ HP</td>
+        </tr>
+        <tr class="highlight-pink">
+          <td>Cons</td>
+          <td>Owning a dead Swedish brand means parts & service can be a headache. Earlier models not as refined as later cars</td>
+        </tr>
+        <tr class="problems-row">
+          <td>Common Problems</td>
+          <td>ABS Module, Excessive Oil Consumption, ECM Failure, Hard Starts/Valve Wear, Water Pump, Convertible Tops</td>
+        </tr>
+        <tr class="alternates-row highlight-blue">
+          <td>Alternates & Honorable Mentions</td>
+          <td>Fiat 500 (12-16)<br />Very Spacious for a small hatchback. Great MPG's with a manual. 500 Abarths are right on the cusp of the 5k budget</td>
+        </tr>
+      </table>
+    </div>
 
 
 
